--- a/responsive.css
+++ b/responsive.css
@@ -5,6 +5,9 @@ body {
 
 header, main {
   width: 960px;
+  max-width: 960px;
+  margin: 0 auto;
+  position: relative;
 }
 
 /* HEADER */
@@ -66,6 +69,7 @@ main .column h2 {
 main .column {
   float: left;
   width: 33.33%;
+  min-width: 320px;
 }
 
 main .column:nth-child(1) h2 { background: rgb(126, 211, 33);}
@@ -75,3 +79,18 @@ main .column:nth-child(3) h2 { background: rgb(0, 174, 255); }
 main .column p {
   padding: 15px;
 }
+
+@media only screen and (max-width: 960px) {
+  /* style */
+  main .column {
+    width: 50%;
+  }
+  main .column:last-child {
+    width: 100%;
+  }
+}
+
+
+
+
+
